<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.muteclock.MainActivity" >

    <item
        android:id="@+id/action_add_rule"
        android:icon="@drawable/ic_action_add_rule"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/add_rule">
    </item>
    <item
        android:id="@+id/action_delete_rule"
        android:icon="@drawable/ic_action_delete"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/delete"/>
    <item
        android:id="@+id/action_like"
        android:icon="@drawable/ic_action_like"
        android:orderInCategory="0"
        android:showAsAction="ifRoom"
        android:title="@string/like"/>

</menu>